# golden-edge

./: .coveragerc  README.md  pyproject.toml
config/: zenoh.json5
examples/: README.md
examples/cli/: README.md  bar.json5  qux.json5
examples/config/: everything.json5
examples/methods/: callee.py  caller.py  methods.json5
examples/models/: caller.py  models.json5  updater.py
examples/remote/: node.json5  node.py  remote.py
examples/subnodes/: callee.json5  callee.py  caller.py  gedge.json5
examples/tag_binds/: caller.py  tag_binds.json5  updater.py
examples/tag_groups/: subscriber.py  tag_groups.json5  updater.py
examples/tag_updates/: subscriber.py  tag_updates.json5  updater.py
examples/tag_writes/: tag_writes.json5  writee.py  writer.py
proto/: base_data.proto  body.proto  body_config.proto  data_model_config.proto  data_model_session.proto  data_object_config.proto  meta.proto  method.proto  method_config.proto  method_session.proto  model.proto  param.proto  params_config.proto  prop.proto  props.proto  response_config.proto  response_session.proto  state.proto  subnode.proto  subnode_config.proto  tag.proto  tag_config.proto  tag_data.proto  tag_group_config.proto  tag_group_session.proto  tag_session.proto  type.proto  write_response_data.proto
scripts/: README.md  delete_data.py  generate_proto.py  load_dotenv.py
src/: comm.py  edge.py  error.py  tag.py
src/comm/: comm.py
src/edge/: tag.py
src/gedge/: __init__.py
src/proto/: meta_pb2.py  meta_pb2.pyi  tag_data_pb2.py  tag_data_pb2.pyi
test/: daisy_demo.py  gedge_config.json5  listener_node.py  prefix.txt  tester.py
test/test_api_review/: node.py  test_remote.py
test/test_comm/: test_NodeKeySpace.py  test_SubnodeKeySpace.py  test_comm.py  test_keys.py
test/test_phase2/: m1.py  (+13 more)
(+222 files in other folders)
