[project]
name = "golden-edge"
version = "0.0.1"
authors = [
    { name = "Grayson Nocera", email = "gnocera@purdue.edu" }
]
description = "A replacement for MQTT Sparkplug"
readme = "README.md"
dependencies = [
    "protobuf==6.30.2",
    "eclipse-zenoh",
    "json5",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pymodbus",
    "requests",
    "python-dotenv",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/Purdue-IE-Labs/golden-edge"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"